# vortexui

./: MANIFEST.in  README.md  Screenshot  __init__.py  main.py  pyproject.toml  recompile.sh  setup.py  styles.py  test.py  theme_engine.py  thread_manager.py  utils.py  widgets.py
vortexui/: .windows.py.swp  base_style.css  test.py  theme_engine.py  utils.py  widgets.py  windows.py
vortexui.egg-info/: PKG-INFO  SOURCES.txt
vortexui/themes/: base.css  default-blue.json
