[project]
name = "vortexui"
version = "0.0.1"
description = "Functional Futuristic UI Toolkit Based On PySide6"
authors = [{ name="Raghav", email="kumaraghav079@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = ["PySide6"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
